samples/_failures_safe/1761504925_303baf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_07e5e34b.c: In function ‘main’:
./samples/SAFE/__tmp_07e5e34b.c:198:9: error: expected declaration or statement at end of input
  198 |         fprintf(stderr, "No tokens found\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_07e5e34b.c:198:9: error: expected declaration or statement at end of input
